kubernetes-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-kubernetes-deployment
  labels:
    app: docker-kubernetes
spec:
  replicas: 2
  selector:
    matchLabels:
      app: docker-kubernetes
  template:
    metadata:
      labels:
        app: docker-kubernetes
    spec:
      containers:
      - name: docker-kubernetes
        image: shashikantsweden/docker-kubernetes:1050461
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: docker-hub-secret
