kubernetes-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-kubernetes-service
spec:
  selector:
    app: docker-kubernetes
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: LoadBalancer
